<resources>
    <string name="app_name">bop it</string>
    <string name="app_descripcion">Esta es la pantalla de informacion de la aplicacion creada por Adolfo Fernandez para el ramo de Dispositivos moviles para ser un esqueleto del videojuego "bot it"</string>
    <string name="button_about">Informacion de la app</string>
    <string name="button_config">Configuracion</string>
    <string name="button_home">Regresar al menu principal</string>
    <string name="splash_name">Adolfo Fernandez Padilla</string>
    <string name="two_Seg">2 Segundos</string>
    <string name="five_Seg">5 Segundos</string>
    <string name="seven_Seg">7 Segundos</string>

    <!-- Preference Titles -->
    <string name="player_header">Datos del Jugador</string>
    <string name="perso_header">Personalizacion del juego</string>
    <string name="default_header">Administracion general</string>

    <!-- Messages Preferences -->
    <string name="player_name">Nombre del jugador</string>
    <string name="point_title">Puntaje mas alto</string>

    <!-- Sync Preferences -->
    <string name="theme_tittle">Seleccion el tema</string>
    <string name="umbra_tittle">Umbral de vibrar</string>

    <!-- Mensajes por defecto -->
    <string name="pregunta_check">¿Volver a valores por defecto?</string>
    <string name="confirmar_check">¿Seguro?</string>

    <string name="default_name">Usuario</string>
    <string name="Puntuacion_player">Puntuacion</string>

    <string name="winsound">Reproducir sonido de victoria</string>
    <string name="losesound">Reproducir sonido de derrota</string>
    <string name="backgroundMusic">Reproducir musica de fondo</string>
    <string name="moreSpeed">Mas rapido</string>
    <string name="lessSpeed">Mas lento</string>
    <string name="testMedia">Zona de prueba de sonido</string>
    <string name="testTouchEvent">Zona de prueba de TouchEvent</string>
    <string name="testShake">Zona de prueba de agitar</string>

    <string name="testZone">Zona de pruebas</string>
    <string name="playButton">Jugar</string>
    <string name="title_activity_test_shake">TestShakeActivity</string>

</resources>