<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/player_header">

        <EditTextPreference
            app:defaultValue="@string/default_name"
            app:key="playername"
            app:title="@string/player_name"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/perso_header">

        <ListPreference
            android:title="@string/theme_tittle"
            app:defaultValue="2"
            app:entries="@array/Theme_entries"
            app:entryValues="@array/Theme_Value"
            app:key="Theme_color"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/default_header">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/pregunta_check"
            app:key="confirm" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/confirmar_check"
            app:dependency="confirm" />
    </PreferenceCategory>

</PreferenceScreen>