<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoundTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/winbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winsound" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/musicbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backgroundMusic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/slowbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lessSpeed" />

                <Button
                    android:id="@+id/speedbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moreSpeed" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/losebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/losesound" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>